# Legacy-Modernization-Radar

./: .gitignore  LICENSE.txt  README.md  REVIEW.md  docker-compose.yml
apps/api/: Dockerfile  fly.toml  llm.py  main.py  pyproject.toml  schema.py
apps/api/scanners/: __init__.py  clone.py  complex_methods.py  dependency_cve.py  runner.py  test_coverage.py
apps/web/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
apps/web/src/: App.tsx  index.css
apps/web/src/lib/: types.ts
bob_sessions/01_init_petclinic_baseline/: AGENTS.md  task_history.md
bob_sessions/02_modernization_analysis/: MODERNIZATION_ANALYSIS.md  task_history.md
bob_sessions/03_hero_patch_cve/: RECORDING.md  task_history.md
bob_sessions/04_init_radar_dogfood/: AGENTS.md  task_history.md
bob_sessions/05_review_radar/: task_history.md
