[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legacy-modernization-radar-api"
version = "0.1.0"
description = "FastAPI backend for the Legacy Modernization Radar hackathon app"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "httpx",
  "python-dotenv",
  "python-multipart",
]

[tool.setuptools]
packages = ["scanners"]
py-modules = ["llm", "main", "schema"]
